crates/slpy-eval/tests/snapshots/golden_grids__checker-drift_80x24_ascii-fine.snap
---
source: crates/slpy-eval/tests/golden_grids.rs
expression: s
---
checker-drift frame 7
term: 80x24  viewport: 80x23  pads: L0 R0 T0 B1
palette: ascii-fine  fg: chroma
+--------------------------------------------------------------------------------+
|tt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tt|
|tt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tt|
|tt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tt|
|t1f1tt1f1tt1f1tt1f1tt1f1tt1f1tt1f1tt1f1tt1f1tt1f1tt1f1tt1f1tt1f1tt1f1tt1f1tt1f1t|
|t1f1tt1f1tt1f1tt1f1tt1f1tt1f1tt1f1tt1f1tt1f1tt1f1tt1f1tt1f1tt1f1tt1f1tt1f1tt1f1t|
|tttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttt|
|tt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tt|
|tt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tt|
|tttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttt|
|t1f1tt1f1tt1f1tt1f1tt1f1tt1f1tt1f1tt1f1tt1f1tt1f1tt1f1tt1f1tt1f1tt1f1tt1f1tt1f1t|
|t1f1tt1f1tt1f1tt1f1tt1f1tt1f1tt1f1tt1f1tt1f1tt1f1tt1f1tt1f1tt1f1tt1f1tt1f1tt1f1t|
|tttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttt|
|tt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tt|
|tt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tt|
|tttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttt|
|t1f1tt1f1tt1f1tt1f1tt1f1tt1f1tt1f1tt1f1tt1f1tt1f1tt1f1tt1f1tt1f1tt1f1tt1f1tt1f1t|
|t1f1tt1f1tt1f1tt1f1tt1f1tt1f1tt1f1tt1f1tt1f1tt1f1tt1f1tt1f1tt1f1tt1f1tt1f1tt1f1t|
|tttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttt|
|tt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tt|
|tt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tttt1tt|
|ttfttttfttttfttttfttttfttttfttttfttttfttttfttttfttttfttttfttttfttttfttttfttttftt|
|t1f1tt1f1tt1f1tt1f1tt1f1tt1f1tt1f1tt1f1tt1f1tt1f1tt1f1tt1f1tt1f1tt1f1tt1f1tt1f1t|
|t1f1tt1f1tt1f1tt1f1tt1f1tt1f1tt1f1tt1f1tt1f1tt1f1tt1f1tt1f1tt1f1tt1f1tt1f1tt1f1t|
|                                                                                |
+--------------------------------------------------------------------------------+
fg-fnv64 per row:
  0 c9bca0d64e6d06f5
  1 c9bca0d64e6d06f5
  2 6bb8710783db1515
  3 234075f7ddaa27b5
  4 234075f7ddaa27b5
  5 93e690c1ac020f55
  6 c9bca0d64e6d06f5
  7 c9bca0d64e6d06f5
  8 124a957bfdc3dbd5
  9 234075f7ddaa27b5
 10 234075f7ddaa27b5
 11 d65eb727a4b3c0d5
 12 c9bca0d64e6d06f5
 13 c9bca0d64e6d06f5
 14 26fd04b8bec65055
 15 234075f7ddaa27b5
 16 234075f7ddaa27b5
 17 faf520ac73448cd5
 18 c9bca0d64e6d06f5
 19 c9bca0d64e6d06f5
 20 9c0f19d03b9be795
 21 234075f7ddaa27b5
 22 234075f7ddaa27b5
 23 223995d44c4552f5
